remove views folder and db name change
Deleted the views folder and the express-handlebars dependency. Changed the name of the database from hashtagGoals to hashtag_goals_db, since camel-casing doesn't register.

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "exampledb",
+    "database": "hasgtag_goals_db",
     "host": "localhost",
     "dialect": "mysql"
   },
