--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "hasgtag_goals_db",
+    "password": "Au98gust98!",
+    "database": "hashtag_goals_db",
     "host": "localhost",
     "dialect": "mysql"
   },
