--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.7.0",
     "bulma": "^0.7.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
