--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "animate.css": "^3.7.0",
+    "body-parser": "^1.18.3",
     "bulma": "^0.7.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
